--- a/config/symlinks.conf
+++ b/config/symlinks.conf
@@ -12,6 +12,7 @@ home/.vimrc:~/.vimrc:Vim configuration
 
 # .config directories
 .config/kitty:~/.config/kitty:Kitty terminal
+.config/helix:~/.config/helix:helix editor
 .config/gtk-3.0:~/.config/gtk-3.0:GTK configuration
 .config/picom:~/.config/picom:Compositor
 .config/qt5ct:~/.config/qt5ct:Qt5 configuration
