Refactor: Category-based symlink management and directory consolidation.
- Moved 'hypr/' and 'dwm/' into 'dotconfig/' to match app configuration standards.
- Updated 'setup/symlinks.conf' to support a 4-column format (source:target:description:category).
- Implemented category filtering in 'create_symlinks_from_config' to prevent premature linking of module-specific configs.
- Updated 'hyprland' and 'dwm' modules to use the centralized category-based symlink loader.
- Improved dry-run logic for package installation and source builds.

--- a/setup/symlinks.conf
+++ b/setup/symlinks.conf
@@ -1,20 +1,26 @@
-# Format: source:target:description
+# Format: source:target:description:category
 
 # Home dotfiles
-home/aliasrc:~/.aliasrc:Shell aliases
-home/functionrc:~/.functionrc:Shell functions
-home/path_variablerc:~/.path_variablerc:Path variables
-
-# If you have these files in your home/ directory:
-home/.zshrc:~/.zshrc:Zsh configuration
-home/.bashrc:~/.bashrc:Bash configuration
-home/.vimrc:~/.vimrc:Vim configuration
+home/aliasrc:~/.aliasrc:Shell aliases:global
+home/functionrc:~/.functionrc:Shell functions:global
+home/path_variablerc:~/.path_variablerc:Path variables:global
+home/.zshrc:~/.zshrc:Zsh configuration:global
+home/.bashrc:~/.bashrc:Bash configuration:global
+home/.vimrc:~/.vimrc:Vim configuration:global
 
 # dotconfig directories
-dotconfig/kitty:~/.config/kitty:Kitty terminal
-dotconfig/helix:~/.config/helix:helix editor
-dotconfig/gtk-3.0:~/.config/gtk-3.0:GTK configuration
-dotconfig/picom:~/.config/picom:Compositor
-dotconfig/qt5ct:~/.config/qt5ct:Qt5 configuration
-dotconfig/sxhkd:~/.config/sxhkd:Hotkey daemon
-dotconfig/sxiv:~/.config/sxiv:Sxiv configuration
+dotconfig/kitty:~/.config/kitty:Kitty terminal:global
+dotconfig/helix:~/.config/helix:helix editor:global
+dotconfig/gtk-3.0:~/.config/gtk-3.0:GTK configuration:global
+dotconfig/picom:~/.config/picom:Compositor:global
+dotconfig/qt5ct:~/.config/qt5ct:Qt5 configuration:global
+dotconfig/sxhkd:~/.config/sxhkd:Hotkey daemon:global
+dotconfig/sxiv:~/.config/sxiv:Sxiv configuration:global
+
+# Window Manager specific (Linked via their respective modules)
+dotconfig/hypr:~/.config/hypr:Hyprland configuration:hyprland
+dotconfig/dwm:~/.config/dwm:DWM configuration:dwm
+dotconfig/dwm/dwmscripts:~/.local/bin/dwmscripts:DWM bar scripts:dwm
+dotconfig/dwm/.xinitrc:~/.xinitrc:X11 start script:dwm
+dotconfig/dwm/.Xresources:~/.Xresources:X11 resources:dwm
+dotconfig/dwm/autostart-patch/autostart.sh:~/.dwm/autostart.sh:DWM autostart script:dwm
