adding the network system tray

--- a/dotconfig/hypr/configs/Execs.conf
+++ b/dotconfig/hypr/configs/Execs.conf
@@ -30,7 +30,7 @@ exec-once = waybar
 exec-once = hyprscratch init clean eager
 # exec-once = $scriptsDir/Startup.sh
 exec-once = blueman-applet &
-# exec-once = nm-applet --indicator &
+exec-once = nm-applet --indicator &
 #exec-once = rog-control-center &
 
 #clipboard manager
