Enhance: Integrated Waybar configuration into the Hyprland module.
- Added 'dotconfig/waybar' to 'setup/symlinks.conf' under the 'hyprland' category.
- Updated 'modules/hyprland.sh' to automatically make Waybar scripts executable upon installation.

--- a/setup/symlinks.conf
+++ b/setup/symlinks.conf
@@ -19,6 +19,7 @@ dotconfig/sxiv:~/.config/sxiv:Sxiv configuration:global
 
 # Window Manager specific (Linked via their respective modules)
 dotconfig/hypr:~/.config/hypr:Hyprland configuration:hyprland
+dotconfig/waybar:~/.config/waybar:Waybar configuration:hyprland
 dotconfig/dwm:~/.config/dwm:DWM configuration:dwm
 dotconfig/dwm/dwmscripts:~/.local/bin/dwmscripts:DWM bar scripts:dwm
 dotconfig/dwm/.xinitrc:~/.xinitrc:X11 start script:dwm
