added missing packages & fixed Hyprland config

--- a/setup/packages.conf
+++ b/setup/packages.conf
@@ -18,12 +18,12 @@ curl:curl:curl:curl
 wget:wget:wget:wget
 micro:micro:micro:micro
 helix:helix:helix:helix
+opencode:::
 cowsay:cowsay:cowsay:cowsay
 figlet:figlet:figlet:figlet
 jq:jq:jq:jq
 pv:pv:pv:pv
 starship:starship:starship:starship
-cheat-bin:cheat:cheat:
 python-pip:python3-pip:python3-pip:python-pip
 python-requests:python3-requests:python3-requests:python-requests
 ufw:ufw:ufw:
@@ -34,22 +34,30 @@ ntfs-3g:ntfs-3g:ntfs-3g:
 testdisk:testdisk:testdisk:
 lshw:lshw:lshw:
 scrcpy:scrcpy:scrcpy:
-postman-bin:::
 obsidian:::
+yazi:::
 google-chrome:google-chrome-stable:google-chrome-stable:
 
 [fonts]
 ttf-jetbrains-mono:jetbrains-mono-fonts:fonts-jetbrains-mono:
 ttf-jetbrains-mono-nerd:jetbrains-mono-nerd-fonts::
+noto-fonts:::
+noto-fonts-extra:::
+ttf-hack
+ttf-hack-nerd
 ttf-roboto:google-roboto-fonts:fonts-roboto:
 otf-font-awesome:fortawesome-fontawesome-fonts:fonts-font-awesome:
 terminus-font:terminus-fonts:xfonts-terminus:
 
 [hyprland]
-hyprland-git:hyprland:hyprland:
+hyprland:hyprland:hyprland:
 waybar:waybar:waybar:
 mako:mako:mako:
 swaybg:swaybg:swaybg:
+swappy:::
+swww:::
+overskride:::
+hyprscratch:::
 wofi:wofi:wofi:
 kitty:kitty:kitty:
 grim:grim:grim:
@@ -57,6 +65,12 @@ slurp:slurp:slurp:
 wl-clipboard:wl-clipboard:wl-clipboard:
 pavucontrol:pavucontrol:pavucontrol:
 pipewire:pipewire:pipewire:
+xdg-desktop-portal-hyprland:::
+nwg-displays:::
+hyprpolkitagent:::
+hyprsunset:::
+network-manager-applet:::
+brightnessctl::
 
 [dwm]
 xorg-server:xorg-x11-server-Xorg:xserver-xorg:
@@ -64,6 +78,8 @@ xorg-xinit:xorg-x11-xinit:xinit:
 picom:picom:picom:
 nitrogen:nitrogen:nitrogen:
 sxhkd:sxhkd:sxhkd:
+brightnessctl:::
+
 
 [media]
 mpv:mpv:mpv:mpv
