--- a/dotconfig/hypr/configs/WindowRules.conf
+++ b/dotconfig/hypr/configs/WindowRules.conf
@@ -16,31 +16,31 @@
 # windowrule = workspace 3,float,class:^(scrcpy)$
 
 # Ignore maximize requests from apps. You'll probably like this.
-windowrulev2 = suppressevent maximize, class:.*
+# windowrulev2 = suppressevent maximize, class:.*
 
 # Fix some dragging issues with XWayland
-windowrulev2 = nofocus,class:^$,title:^$,xwayland:1,floating:1,fullscreen:0,pinned:0
+# windowrulev2 = nofocus,class:^$,title:^$,xwayland:1,floating:1,fullscreen:0,pinned:0
 
 # windowrule v2
-windowrulev2 = workspace 2, class:^(firefox)$
-windowrulev2 = workspace 4, class:^(google-chrome)$
-windowrulev2 = workspace 3, class:^(thunar)$
-# windowrulev2 = workspace 3, class:^(scrcpy)$
-windowrulev2 = workspace 1, class:^(thunderbird)$
-windowrulev2 = workspace 4, class:^(com.obsproject.Studio)$
-windowrulev2 = workspace 5 silent, class:^(Steam)$,title:^(Steam)$
-windowrulev2 = workspace 5 silent, class:^(lutris)$
-windowrulev2 = workspace 6, class:^(virt-manager)$
-windowrulev2 = workspace 7 silent, class:^(discord)$
-windowrulev2 = workspace 9 silent, class:^(audacious)$
+# windowrulev2 = workspace 2, class:^(firefox)$
+# windowrulev2 = workspace 4, class:^(google-chrome)$
+# windowrulev2 = workspace 3, class:^(thunar)$
+# # windowrulev2 = workspace 3, class:^(scrcpy)$
+# windowrulev2 = workspace 1, class:^(thunderbird)$
+# windowrulev2 = workspace 4, class:^(com.obsproject.Studio)$
+# windowrulev2 = workspace 5 silent, class:^(Steam)$,title:^(Steam)$
+# windowrulev2 = workspace 5 silent, class:^(lutris)$
+# windowrulev2 = workspace 6, class:^(virt-manager)$
+# windowrulev2 = workspace 7 silent, class:^(discord)$
+# windowrulev2 = workspace 9 silent, class:^(audacious)$
 
 #opacity (transparent) #enable as desired
-windowrulev2 = opacity 0.9 0.7, class:^(firefox)$
+# windowrulev2 = opacity 0.9 0.7, class:^(firefox)$
 #windowrulev2 = opacity 0.9 0.7, class:^(thunar)$
 #windowrulev2 = opacity 0.7 0.7, class:^(foot)$
 #windowrulev2 = opacity 0.9 0.7, class:^(mousepad)$
-windowrulev2 = opacity 0.9 0.7, class:^(codium-url-handler)$
-windowrulev2 = opacity 0.9 0.7, class:^(VSCodium)$
+# windowrulev2 = opacity 0.9 0.7, class:^(codium-url-handler)$
+# windowrulev2 = opacity 0.9 0.7, class:^(VSCodium)$
 
 #windowrulev2 = bordercolor rgb(EE4B55) rgb(880808), fullscreen:1
 #windowrulev2 = bordercolor rgb(282737) rgb(1E1D2D), floating:1
