feat(theme): implement dynamic dark/light toggle and organize styles
Added a comprehensive theme switching system that handles Waybar, Kitty, Wofi, Mako, and Helix. Organized styles into dedicated directories and added documentation.

--- a/dotconfig/kitty/kitty.conf
+++ b/dotconfig/kitty/kitty.conf
@@ -24,12 +24,40 @@ input_delay                     1
 sync_to_monitor                 no
 
 # Font settings
-font_family                     JetBrainsMono
-font_features                   JetBrainsMono +cv04 +cv10 +ss04 +ss03 +cv25 +cv32 +cv28 +ss06 +ss07
-bold_font                       JetBrainsMono-Bold
+font_family                     JetBrainsMono Nerd Font
+bold_font                       auto
 italic_font                     auto
 bold_italic_font                auto
-font_size                       14
+font_size                       14.0
+
+# Symbol mapping for Font Awesome and Nerd Font
+# Seti-UI + Custom
+symbol_map U+E5FA-U+E62B JetBrainsMono Nerd Font
+# Devicons
+symbol_map U+E700-U+E7C5 JetBrainsMono Nerd Font
+# Font Awesome
+symbol_map U+F000-U+F2E0 JetBrainsMono Nerd Font
+# Font Awesome Extension
+symbol_map U+E200-U+E2A9 JetBrainsMono Nerd Font
+# Material Design Icons
+symbol_map U+F500-U+FD46 JetBrainsMono Nerd Font
+# Weather
+symbol_map U+E300-U+E3EB JetBrainsMono Nerd Font
+# Octicons
+symbol_map U+F400-U+F4A8,U+2665,U+26A1,U+F27C JetBrainsMono Nerd Font
+# Powerline Extra Symbols
+symbol_map U+E0A3,U+E0B4-U+E0C8,U+E0CC-U+E0D2,U+E0D4 JetBrainsMono Nerd Font
+# IEC Power Symbols
+symbol_map U+23FB-U+23FE,U+2b58 JetBrainsMono Nerd Font
+# Font Logos
+symbol_map U+F300-U+F313 JetBrainsMono Nerd Font
+# Pomicons
+symbol_map U+E000-U+E00D JetBrainsMono Nerd Font
+
+# Fallback to Font Awesome 7 if missing in Nerd Font
+symbol_map U+f000-U+f2ff Font Awesome 7 Free
+symbol_map U+f300-U+f3ff Font Awesome 7 Brands
+
 disable_ligatures               never
 adjust_line_height              1
 
@@ -63,61 +91,8 @@ tab_bar_align                   left
 shell_integration               enabled no-cursor
 update_check_interval           0
 
-# Nord Colorscheme for Kitty
-# Based on:
-# - https://gist.github.com/marcusramberg/64010234c95a93d953e8c79fdaf94192
-# - https://github.com/arcticicestudio/nord-hyper
-
-foreground              #e0def4
-background              #12121e
-selection_foreground    #12121e
-selection_background    #FFFACD
-url_color               #9ccfd8
-cursor                  #cccccc
-
-# black
-color0   #3B4252
-color8   #4C566A
-
-# red
-color1   #FF789E
-color9   #FF789E
-
-# green
-color2   #A3BE8C
-color10  #A3BE8C
-
-# yellow
-color3   #f6c177
-color11  #f6c177
-
-# blue
-color4  #81A1C1
-color12 #81A1C1
-
-# magenta
-color5   #c4a7e7
-color13  #c4a7e7
-
-# cyan
-color6   #9ccfd8
-color14  #8FBCBB
-
-# white
-color7   #E5E9F0
-color15  #ECEFF4
-
-# Windows
-active_border_color     #f6c177
-inactive_border_color   #12121e
-
-# Tabs
-active_tab_foreground   #12121e
-active_tab_background   #9ccfd8
-active_tab_font_style   bold
-inactive_tab_foreground #e0def4
-inactive_tab_background #12121e
-inactive_tab_font_style normal
+# Themes
+include current-theme.conf
 
 ####### Keyboard Shortcuts #######
 
@@ -129,7 +104,7 @@ map ctrl+v paste_from_clipboard
 
 # Tab management
 map ctrl+shift+y new_tab
-map alt+y close_tab    
+map alt+y close_tab
 
 map alt+1 goto_tab 1
 map alt+2 goto_tab 2
@@ -156,7 +131,7 @@ map alt+shift+h move_window left
 map alt+shift+j move_window bottom
 map alt+shift+k move_window top
 map alt+shift+l move_window right
- 
+
 map alt+shift+1 move_window left
 map alt+shift+2 move_window bottom
 map alt+shift+3 move_window top
