feat(help): add dynamic keybinding help system
Created a Python-based keybinding parser and a robust shell wrapper to display shortcuts in a terminal-based Markdown viewer (SUPER+H).

--- a/dotconfig/hypr/configs/Keybinds.conf
+++ b/dotconfig/hypr/configs/Keybinds.conf
@@ -64,7 +64,8 @@ bind = $mainMod, W, exec, $browser
 # bind = $mainMod SHIFT, W, exec, $waybarStyle
 # bind = $mainMod CTRL, W, exec, $wallpaperSelect
 # bind = $mainMod SUPER, W, exec, $ChangeLayoutMenu
-bind = $mainMod, H, exec, $Help
+bind = $mainMod, H, exec, $Help # Show this help menu
+bind = $mainMod SHIFT, T, exec, $DarkLight # Toggle Dark/Light theme
 bind = $mainMod, B, exec, killall -SIGUSR1 waybar # Toggle hide/show waybar
 bind = $mainMod SHIFT, G, exec, $GameMode
 
