fix(scripts): cleanup paths and wofi parameters
Updated Waybar and Wofi scripts to use consistent paths and removed obsolete parameters. Enabled hyprscratch in Execs.conf.

--- a/dotconfig/hypr/configs/Execs.conf
+++ b/dotconfig/hypr/configs/Execs.conf
@@ -35,7 +35,7 @@ exec-once = nm-applet --indicator &
 #clipboard manager
 exec-once = wl-paste --watch cliphist store
 
-exec-once = hyprscratch clean
+exec-once = hyprscratch init clean eager
 
 #Catpuccin Themes
 #source = $themes/frappe.conf
